# ChangeLog for dev-perl/DateTime-TimeZone
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.70 2007/05/05 17:41:58 dertobi123 Exp $

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  DateTime-TimeZone-0.62.ebuild:
  ppc stable

*DateTime-TimeZone-0.65.01 (28 Apr 2007)

  28 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +DateTime-TimeZone-0.65.01.ebuild:
  Version bump

  16 Apr 2007; Markus Rothe <corsair@gentoo.org>
  DateTime-TimeZone-0.57.ebuild:
  Stable on ppc64

  10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  DateTime-TimeZone-0.62.ebuild:
  sparc stable

  08 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  DateTime-TimeZone-0.62.ebuild:
  Marking amd64 stable

  08 Apr 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Marking amd64 stable

*DateTime-TimeZone-0.64 (06 Apr 2007)

  06 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +DateTime-TimeZone-0.64.ebuild:
  Version bump

*DateTime-TimeZone-0.63 (01 Apr 2007)

  01 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +DateTime-TimeZone-0.63.ebuild:
  Version bump

*DateTime-TimeZone-0.62 (09 Mar 2007)

  09 Mar 2007; Michael Cummings <mcummings@gentoo.org>
  +DateTime-TimeZone-0.62.ebuild:
  Version bump

  26 Feb 2007; Christian Hartmann <ian@gentoo.org>
  -DateTime-TimeZone-0.40.ebuild, -DateTime-TimeZone-0.48.ebuild,
  -DateTime-TimeZone-0.51.ebuild:
  Cleanup for bug #166904

  26 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  DateTime-TimeZone-0.57.ebuild:
  stable x86, requested by ian on IRC

  24 Feb 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  DateTime-TimeZone-0.57.ebuild:
  ppc stable

*DateTime-TimeZone-0.60 (17 Feb 2007)

  17 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  +DateTime-TimeZone-0.60.ebuild:
  Version bump

  23 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  DateTime-TimeZone-0.57.ebuild:
  Stable on Alpha + IA64.
