@@ -1,0 +1,24 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/DateTime-TimeZone-0.66.01.ebuild,v 1.1 2007/05/11 14:11:08 mcummings Exp $
+
+inherit versionator perl-module
+
+MY_P="${PN}-$(delete_version_separator 2)"
+S=${WORKDIR}/${MY_P}
+
+DESCRIPTION="Time zone object base class and factory"
+HOMEPAGE="http://search.cpan.org/~drolsky/"
+SRC_URI="mirror://cpan/authors/id/D/DR/DROLSKY/${MY_P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+SRC_TEST="do"
+
+RDEPEND=">=dev-perl/Params-Validate-0.72
+	>=dev-perl/Class-Singleton-1.03
+	dev-lang/perl"
+DEPEND="${RDEPEND}
+	>=dev-perl/module-build-0.28"
