@@ -1,0 +1,3 @@
+MD5 61c4f717f1b7ddb969618f0a4ce035ed DateTime-TimeZone-0.6601.tar.gz 341975
+RMD160 999d95fec6aafb1f37ea2bcf6de75adc3a98c067 DateTime-TimeZone-0.6601.tar.gz 341975
+SHA256 325aa060d2fdf447ad702cc51960027958e740a2ad84c50672129cb9dfea5efc DateTime-TimeZone-0.6601.tar.gz 341975
