@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DateTime-TimeZone
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.70 2007/05/05 17:41:58 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.71 2007/05/11 14:11:08 mcummings Exp $
+
+*DateTime-TimeZone-0.66.01 (11 May 2007)
+
+  11 May 2007; Michael Cummings <mcummings@gentoo.org>
+  +DateTime-TimeZone-0.66.01.ebuild:
+  Version bump
 
   05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   DateTime-TimeZone-0.62.ebuild:
